與TSB .class比對後修改
log OK