@@ -6,39 +6,29 @@ import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLDecoder;
 
+import org.apache.commons.lang.CharEncoding;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.glassfish.jersey.server.ResourceConfig;
 import org.glassfish.jersey.server.spring.scope.RequestContextFilter;
 
+/* loaded from: StartServer.class */
 public class StartServer extends ResourceConfig {
 	private static Logger LOG = LogManager.getLogger(StartServer.class);
 
-	/**
-	 * Register JAX-RS application components.
-	 * 
-	 * @throws IOException
-	 */
 	public StartServer() throws IOException {
-//		String envPath = getWebInfPath() + File.separator + "classes" + File.separator + "env";
-//		String env = new String(Utility.readFile(envPath));
-		String log4jxml = getWebInfPath() + File.separator + "classes" + File.separator + Env.getEnvironment()
-				+ File.separator + "log4j.xml";
+		String[] strArr;
+		String[] strArr2;
+		String log4jxml = String.valueOf(getWebInfPath()) + File.separator + "classes" + File.separator
+				+ Env.getEnvironment() + File.separator + "log4j.xml";
 		System.out.println(log4jxml);
-//		DOMConfigurator.configure(log4jxml);
+		
 		LOG.info("Start Server");
-		// ApplicationContext rootCtx = ContextLoader.getCurrentWebApplicationContext();
-		// ApplicationContext applicationContext = new
-		// ClassPathXmlApplicationContext("applicationContext.xml");
 		LOG.info("Start Init ServerEnv");
 		ServerEnv.init(Env.getEnvironment());
 		LOG.info("End Init ServerEnv");
-
 		LOG.info("Start Init classes");
 		register(RequestContextFilter.class);
-//		register(SessionRequestFilter.class);
-//		register(CustomLoggingFilter.class);
-
 		if (ConfigDefine.INIT_CLASS != null) {
 			for (String _class : ConfigDefine.INIT_CLASS) {
 				try {
@@ -51,14 +41,13 @@ public class StartServer extends ResourceConfig {
 		}
 		LOG.info("End Init classes");
 		LOG.info("Start Init packages");
-
 		if (ConfigDefine.INIT_PACKAGE != null) {
-			for (String _class : ConfigDefine.INIT_PACKAGE) {
+			for (String _class2 : ConfigDefine.INIT_PACKAGE) {
 				try {
-					packages(_class);
-					LOG.info(String.format("packages %s Success", _class));
-				} catch (Exception ex) {
-					LOG.error(ex.getMessage());
+					packages(_class2);
+					LOG.info(String.format("packages %s Success", _class2));
+				} catch (Exception ex2) {
+					LOG.error(ex2.getMessage());
 				}
 			}
 		}
@@ -67,13 +56,9 @@ public class StartServer extends ResourceConfig {
 	}
 
 	private String getWebInfPath() throws UnsupportedEncodingException {
-
-		String filePath = "";
-
 		URL url = StartServer.class.getResource("StartServer.class");
-		String className = url.getFile();
-		className = URLDecoder.decode(className, "UTF-8");
-		filePath = className.substring(0, className.indexOf("WEB-INF") + "WEB-INF".length());
+		String className = URLDecoder.decode(url.getFile(), CharEncoding.UTF_8);
+		String filePath = className.substring(0, className.indexOf("WEB-INF") + "WEB-INF".length());
 		return filePath;
 	}
 }
